# Secured_Protocol

./: .gitignore  CMakeLists.txt  Makefile  README.markdown  README.md  server  server.c
include/: applink.h  crypto_functions.h  crypto_utils.h  net_sockets.h
src/: crypto_functions.c  crypto_utils.c  main.c  net_sockets.c
